--- a/demo.Rmd
+++ b/demo.Rmd
@@ -1,6 +1,27 @@
 
+### ozbabynames 
+
+This dataset contains summary data for popular Australian baby names by sex, state and year. 
 
 ```{r}
+devtools::install_github("ropenscilabs/ozbabynames")
+library(ozbabynames)
+```
+
+This dataset was created at rOpenSci OzUnconf 2019. Repo: [ozbabynames](https://github.com/ropenscilabs/ozbabynames)
+
+
+### eechidna
+
+This dataset contains data from the Australian Federal elections in 2001, 2004, 2007, 2010, 2013 and 2016, along with the Australian Census information for each House of Representatives electorate from the 2001, 2006, 2011 and 2016 Censuses. Additionally, Census information is imputed for electorates in years 2004, 2007, 2010 and 2013.
+
+```{r}
+install.packages("eechidna")
 
 ```
+
+This dataset was created at rOpenSci auunconf 2016. Repo: [eechidna](https://github.com/ropenscilabs/eechidna)
+
+### datagovau
+
 
