Update sports for AFL

--- a/sport.Rmd
+++ b/sport.Rmd
@@ -1,8 +1,8 @@
 
-https://github.com/ropenscilabs/aflinfo
+
 ### AFL data
 
-This 
+A data package was put together at the [OzUnconf17](https://github.com/ropenscilabs/aflinfo). 
 
 ```{r}
 devtools::install_github("ropenscilabs/aflinfo")
@@ -10,17 +10,25 @@ library(AFLinfo)
 
 ```
 
+However, the fitzRoy package is a better datasource! This package is on CRAN, and accesses data from afltables.com and footywire.com. The author [produced a talk](https://www.youtube.com/watch?v=K80leRL1U3A) on using AFL data to increase the appeal or R and stats to the public. 
+
+```{r}
+install.packages("fitzRoy")
+```
+
+The readme is very informative. 
+
 ### Cricket data
 
 This is an international cricket data package created at [Ozunconf2017](https://github.com/ropenscilabs/cricketdata). 
 
-Install package:
+Details on installing the package:
 
 ```{r}
 devtools::install_github("ropenscilabs/cricketdata")
 suppressPackageStartupMessages(library(cricketdata)) 
 ```
 
-fetch_cricinfo	Fetch Data from Cricinfo
-fetch_player_data	Fetch Player Data
-find_player_id	Find a player id from cricinfo.com
+The [readme is really useful](https://github.com/ropenscilabs/cricketdata) and describes how to fetch the data from the various sources. 
+
+
