Update transport file and add transport data in data folder

--- a/transport.Rmd
+++ b/transport.Rmd
@@ -1,6 +1,12 @@
-
+Flight data from the Bureau of Infrastructure, Transport and Regional Economics [BITRE](https://www.bitre.gov.au/publications), downloaded using the [ozflights package](https://github.com/ropenscilabs/ozflights). See the documentation at https://github.com/ropenscilabs/ozflights. 
 
 ```{r}
+devtools::install_github("ropenscilabs/ozflights")
+
+passengers <- ozflights::airport_passengers()
+freight <- ozflights::international_freight()
+movements <- ozflights::aircraft_movements()
+airports <- ozflights::airports()
+distances <- ozflights::flightdistances()
 
 ```
-
