--- a/demo.Rmd
+++ b/demo.Rmd
@@ -48,17 +48,28 @@ str(eechidna::abs2016)
 ```
 
 
-This dataset was created at rOpenSci auunconf 2016. Repo: [eechidna](https://github.com/ropenscilabs/eechidna)
+These datasets were created at rOpenSci auunconf 2016. Repo: [eechidna](https://github.com/ropenscilabs/eechidna)
 
 
 ### ozmacrodata
 
 Aus economics dataset. 
 
-```{r, eval=TRUE}
-#devtools::install_github("AU-burgr/ozdata")
-library(ozdata)
+```{r, eval = FALSE}
+devtools::install_github("AU-burgr/ozdata")
+```
 
+```{r, eval = FALSE}
+library(ozdata)
+```
+
+#### Examples 
+
+To download data from [](http://ausmacrodata.org), you can search the website and return a table of available datasets. You then download the data of interest. 
+
+```{r, eval = FALSE}
+macro_datasets <- search_ausmacrodata('births')
+macro_datasets
 ```
 
 
