--- a/enviro.Rmd
+++ b/enviro.Rmd
@@ -1,4 +1,6 @@
 
+## Beach datasets
+
 The beach data set is made available from
 https://github.com/rladiessydney/RYouWithMe
 with minimal documentation. You need to make you have installed the package readr.
@@ -8,7 +10,6 @@ library(readr)
 library(tidyverse)
 library(ggplot2)
 Syd_beach<-read_csv("https://raw.githubusercontent.com/rladiessydney/RYouWithMe/master/sydneybeaches.csv")
-getwd()
 Syd_beach
 str(Syd_beach)
 Syd_beach$Site %>% unique
@@ -18,6 +19,15 @@ p1<-qplot(Syd_beach$Site,log(Syd_beach$`Enterococci (cfu/100ml)`+0.5),data=Syd_b
 p1+coord_flip()
 qplot(Syd_beach$Council,log(Syd_beach$`Enterococci (cfu/100ml)`+0.5),data=Syd_beach,geom=c("boxplot"),main="Enterococci",xlab="Council",ylab="Log(cflu/100 ml + 0.5)")
 ```
+
+## Birds datasets
+
+Various datasets about Austrlian birds are [here](https://birdata.birdlife.org.au/).
+
+## Atlas of living Australia 
+
+Search occurrence records in the ALA by species, taxon, dataset, region, date, location, data provider…
+https://www.ala.org.au/
 
 
 
