--- a/enviro.Rmd
+++ b/enviro.Rmd
@@ -27,8 +27,10 @@ Various datasets about Austrlian birds are [here](https://birdata.birdlife.org.a
 ## Atlas of living Australia 
 
 Search occurrence records in the ALA by species, taxon, dataset, region, date, location, data provider…
-Acess the data [here](https://www.ala.org.au/)
+Access the data [here](https://www.ala.org.au/)
 
+## Bush Fires data 
 
-
+Download Near real-time MODIS (C6) and VIIRS (375 m) active fire data.
+Access the data [here](https://firms.modaps.eosdis.nasa.gov/active_fire/)
 
