--- a/sport.Rmd
+++ b/sport.Rmd
@@ -3,16 +3,19 @@
 
 A data package was put together at the [OzUnconf17](https://github.com/ropenscilabs/aflinfo). 
 
-```{r}
-#devtools::install_github("ropenscilabs/aflinfo")
-#library(AFLinfo)
+```{r, eval = FALSE}
+devtools::install_github("ropenscilabs/aflinfo")
+```
 
+
+```{r, eval = TRUE}
+library(AFLinfo)
 ```
 
 However, the fitzRoy package is a better datasource! This package is on CRAN, and accesses data from afltables.com and footywire.com. The author [produced a talk](https://www.youtube.com/watch?v=K80leRL1U3A) on using AFL data to increase the appeal or R and stats to the public. 
 
-```{r}
-#install.packages("fitzRoy")
+```{r, eval = FALSE}
+install.packages("fitzRoy")
 ```
 
 The readme is very informative. 
@@ -23,8 +26,11 @@ This is an international cricket data package created at [Ozunconf2017](https://
 
 Details on installing the package:
 
-```{r}
-#devtools::install_github("ropenscilabs/cricketdata")
+```{r, eval = FALSE}
+devtools::install_github("ropenscilabs/cricketdata")
+```
+
+```{r, eval = TRUE}
 suppressPackageStartupMessages(library(cricketdata)) 
 ```
 
