--- a/enviro.Rmd
+++ b/enviro.Rmd
@@ -1,5 +1,5 @@
 
-### Beach datasets
+### Beach dataset
 
 The beach data set is made available from
 https://github.com/rladiessydney/RYouWithMe
@@ -20,7 +20,7 @@ p1+coord_flip()
 qplot(Syd_beach$Council,log(Syd_beach$`Enterococci (cfu/100ml)`+0.5),data=Syd_beach,geom=c("boxplot"),main="Enterococci",xlab="Council",ylab="Log(cflu/100 ml + 0.5)")
 ```
 
-**Environmental river flows**
+### Environmental river flows
  
 We are going to investigate the relationship between the Murray River average daily water level in metres (WaterLevel) and daily rainfall in mm at Pinegrove on the Murray River (Rainfall) available in the file *PineGrove19Aug19.csv*. It is reasonable to assume that the average daily water level is influenced by rainfall. This data covers the time period from 20 August 2018 to 19 August 2019. This data was extracted from https://riverdata.mdba.gov.au/pinegrove on 20 August 2019. Other locations could be extracted from https://riverdata.mdba.gov.au/. Only the most recent year of data can be extracted.
 
@@ -56,4 +56,24 @@ Access the data [here](https://www.ala.org.au/)
 Download Near real-time MODIS (C6) and VIIRS (375 m) active fire data.
 Access the data [here](https://firms.modaps.eosdis.nasa.gov/active_fire/)
 
+### Bureau of Meteorology data
+
+The r package *bomrang* [here](https://cran.r-project.org/web/packages/bomrang/bomrang.pdf) has functions that extracts Australian Government Bureau
+of Meteorology ('BOM') data.
+
+### Queensland Government environmental maps and data online
+
+Environment data is available from links on [here](https://environment.des.qld.gov.au/resources/maps-imagery-data/online).
+
+### CSIRO Data Access Portal
+
+Some of the data sets from [here](https://data.csiro.au/dap/browse) are not restricted access.
+
+### Australian Ocean Data Network (AODN) Open Access to Ocean Data
+
+Marine and climate science data can be accessed from  [here](https://portal.aodn.org.au/).
+
+### Australian fur seal (Brown fur seal) colonies in Victorian marine waters and adjacent Tasmanian waters
+
+This can be ordered free from  [here](https://discover.data.vic.gov.au/dataset/australian-fur-seal-brown-fur-seal-colonies-in-victorian-marine-waters-and-adjacent-tasmanian-w) which comes from *DataVic* which is the place to discover and access Victorian Government open data. See [here](https://data.vic.gov.au/) for access to other data sets. 
 
